debathena-discuss (10.0.15-0debathena2) unstable; urgency=low

  * Bump debian/compat to 6
  * Package discuss server utilities (Trac: #881)
  * Cleanup man pages so they don't generate errors
  * Add missing man pages to satisfy Lintian
  * Comply with Lintian's feelings on grammar

 -- Jonathan Reed <jdreed@mit.edu>  Fri, 07 Sep 2012 15:53:02 -0400

debathena-discuss (10.0.15-0debathena1) unstable; urgency=low

  * Fix FTBFS with -Werror=format-security.

 -- Geoffrey Thomas <geofft@mit.edu>  Sat, 28 Apr 2012 20:36:38 -0700

debathena-discuss (10.0.14-0debathena1) unstable; urgency=low

  * edsc now defines and sets its own com_err hook to avoid libdsk
    confusing emacs (Trac: 603)

 -- Jonathan Reed <jdreed@mit.edu>  Sun, 25 Sep 2011 17:07:38 -0400

debathena-discuss (10.0.13-0debathena2) unstable; urgency=low

  * Flesh out mkds.8 and rmds.8 some more.

 -- Benjamin Kaduk <kaduk@mit.edu>  Sun, 03 Jul 2011 18:31:43 -0400

debathena-discuss (10.0.13-0debathena1) unstable; urgency=low

  * Update our autogoo for the 21st century.
  * Add a working distclean target.
  * Update packaging to not require daconfiscate.
  * Eliminate libds, as its only use could be replaced by libdsk.
  * Check $PAGER for a pager before falling back on a compiled-in default
    ("more" by default, but "pager" under our packaging). (Trac: #629)

 -- Evan Broder <broder@mit.edu>  Sun, 27 Jun 2010 13:02:34 -0400

debathena-discuss (10.0.12-0debathena3) unstable; urgency=low

  * Don't depend on tcsh anymore

 -- Jonathan Reed <jdreed@mit.edu>  Thu, 08 Apr 2010 22:41:16 -0400

debathena-discuss (10.0.12-0debathena2) unstable; urgency=low

  * Run dsc_setup on behalf of the user, like edsc does. (Trac #426)
  * Rewrite dsc_setup in bash, because all the cool kids use it.

 -- Jonathan Reed <jdreed@mit.edu>  Thu, 08 Apr 2010 21:03:07 -0400

debathena-discuss (10.0.12-0debathena1) unstable; urgency=low

  * Stop using the obsolete AC_TYPE_SIGNAL. (Trac: #347)