@@ -5,8 +5,9 @@ debathena-discuss (10.0.15-0debathena2) unstable; urgency=low
   * Cleanup man pages so they don't generate errors
   * Add missing man pages to satisfy Lintian
   * Comply with Lintian's feelings on grammar
+  * Fix buffer overflow when re-adding meeting (Trac: #973)
 
- -- Jonathan Reed <jdreed@mit.edu>  Fri, 07 Sep 2012 15:53:02 -0400
+ -- Jonathan Reed <jdreed@mit.edu>  Thu, 13 Sep 2012 17:02:56 -0400
 
 debathena-discuss (10.0.15-0debathena1) unstable; urgency=low
 
